--- a/server/static/game.css
+++ b/server/static/game.css
@@ -2,7 +2,7 @@
 	position: fixed;
 	top: 0px;
 	left: 0px;
-	right: 25%;
+	right: 320px;
 	bottom: 0px;
 }
 
@@ -10,18 +10,18 @@
 	font-family: 'Ropa Sans', sans-serif;
 	position: fixed;
 	top: 0px;
-	left: 75%;
+	left: 1600px;
 	right: 0px;
 	bottom : 0px;
-	border-left: 2px solid rgba(0,0,0,0.8);
+	background: #CCC;
 }
 
 #topbar {
 	font-family: 'Ropa Sans', sans-serif;
 	background: #9B9B9B;
-	padding: 13px 15px;	
+	padding: 13px 15px 13px 240px;	
 	height: 124px;
-	line-height: 30px;	
+	line-height: 60px;	
 }
 
 #game {
@@ -35,10 +35,10 @@
 }
 
 #queue .header {
-	height: 40px;
-	line-height: 40px;	
-	padding: 5px 15px;
-	background: #000;
+	font-size: 35px;
+	color: #FFF;
+	font-weight: bold;
+	padding: 10px 15px;	
 }
 
 #qr {
@@ -47,12 +47,22 @@
 	bottom: 0px;
 	left: 0px;
 	right: 0px;
-	height: 200px;
-	border-top: 2px solid rgba(0,0,0,0.8);
+	height: 355px;
+	color: #FFF;
+	font-size: 45px;
+	padding: 0px 0px 20px 0px;
 }
 
 #qr img {
-	max-height: 175px;
+	max-height: 280px;
+}
+
+#qr span {
+	color: #000;
+	font-size: 20px;
+	display: block;
+	position: relative;
+	top: 0px;
 }
 
 #queue .none, #queue .next {
@@ -61,6 +71,10 @@
 
 #queue.empty .none {
 	display: block;
+	text-align: center;
+	padding-top: 200px;
+	padding: 200px 20px 0px 20px;
+	font-size: 35px;
 }
 
 #queue.full .next {
@@ -90,15 +104,42 @@
 	float: left;
 	color: #FFF;
 	font-size: 18px;
-	width: 50%;
+	width: 35%;
 	box-sizing: border-box;
-	padding: 0px 50px;
+	padding: 10px 0px 0px 0px;	
 	text-align: center;
 }
 
-.player img {
+#player1 img {
 	float: right;
-	max-height: 120px;
+	max-height: 110px;
+	padding-left: 25px;
+	margin-top: -5px;
+}
+
+#player2 img {
+	float: left;
+	max-height: 110px;
+	padding-right: 25px;
+	margin-top: -5px;
+}
+
+#player1 b, #player1 span {
+	text-align: right;
+}
+
+#player2 b, #player2 span {
+	text-align: left;
+}
+
+.vs {
+	font-family: 'Ropa Sans', sans-serif;
+	font-size: 120px;
+	line-height: 110px;
+	float: left;
+	color: #FFF;
+	width: 15%;
+	text-align: center;
 }
 
 .player .name {
@@ -148,4 +189,33 @@
 
 .player .score.score5 span:nth-of-type(5) {
 	background: url('/static/crown-on.png') no-repeat center center;	
+}
+
+.queueMember {
+	background: #9B9B9B;
+	border-radius: 5px;
+	border: 10px solid #9B9B9B;
+	padding: 0px;
+	margin-bottom: 10px;
+	height: 36px;
+	line-height: 36px;
+	color: #FFF;
+	font-family: 'Ropa Sans', sans-serif;
+	font-size: 30px;
+}
+
+.queueMember img {
+	float: left;
+	max-height: 36px;
+	padding-right: 10px;
+}
+
+div.queueMember:nth-of-type(1) {
+	border: 10px solid #F5A623;
+}
+
+.next {
+	padding: 0px 26px;
+	overflow: hidden;
+	height: 500px;
 }
