--- a/server/static/controller.css
+++ b/server/static/controller.css
@@ -5,7 +5,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background: url('/static/NES_Controller_Phonebg.png');
+/*    background: url('/static/NES_Controller_Phonebg.png'); */
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: 0px -20px; 
