--- a/server/static/controller.css
+++ b/server/static/controller.css
@@ -8,11 +8,44 @@ body {
 /*    background: url('/static/NES_Controller_Phonebg.png'); */
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: 0px -20px; 
+    background-position: 0px -20px;
+    background-color: #cfcfcf;
+    color: #181818;
+}
+
+h1 {
+  font-family: 'Teko';
+  font-size: 35pt;
+}
+
+.btn {
+    background-color: #4ec48f;
+  font-family: 'Teko';
+  color: #ffffff;
+  font-size: 30px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  width: 80%;
+  height:50px;
+  border: 0;
+}
+
+.bottom {
+  position:relative;
+  bottom: 0px;
+}
+
+#username {
+  width:80%;
+  padding: 10px 20px 10px 20px;
+  border: 0;
+  height:50px;
+  margin-bottom: 20px;
+  margin-top:    50px;
 }
 
 .login { 
-    border: 1px solid black;
+    margin-top: 50px;
     text-align: center;
 }
 
@@ -27,11 +60,34 @@ body {
 .canvas {
     padding-left: 0;
     padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 15px;
     display: block;
     margin-top: 183px;
     position: relative;
     left: -8px;
 
+}
+
+#file_input {
+    background-color: #4ec48f;
+  font-family: 'Teko';
+  color: #ffffff;
+  font-size: 30px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  width: 80%;
+  height:50px;
+  border: 0;
+}
+
+.fileUpload  input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
 }
